Fix: image will get cut of on mobile screen

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -353,8 +353,10 @@ $min-name-height:  calc($min-name-length + $name-padding * 2 + $border-width * 2
     .image {
         position: relative;
         min-height: 10em;
+        max-width: 100%;
         img {
             max-height: 30em;
+            max-width: 100%;
             object-fit: contain;
             background: black no-repeat scroll center center;
         }
